--- a/.config/spicetify/Themes/Midnight/color.ini
+++ b/.config/spicetify/Themes/Midnight/color.ini
@@ -1,10 +1,10 @@
 [Base]
-; Light green on Dark Blue background
+; Light Red on Black background
 main_fg                               = f88379
 secondary_fg                          = DEDEDE
 main_bg                               = 000000
 sidebar_and_player_bg                 = 000000
-cover_overlay_and_shadow              = 000000
+cover_overlay_and_shadow              = 1C1C1C
 indicator_fg_and_button_bg            = f88379
 pressing_fg                           = FF5C86
 slider_bg                             = 3F3C45
