--- a/etc/i8kutils/i8kmon.conf
+++ b/etc/i8kutils/i8kmon.conf
@@ -1,4 +1,10 @@
-# Sample i8kmon configuration file (/etc/i8kutils/i8kmon.conf, ~/.i8kmon).
+# Sample i8kmon configuration file (/etc/i8kmon.conf, ~/.i8kmon).
+
+# Run as daemon, override with --daemon option
+set config(daemon)	0
+
+# Automatic fan control, override with --auto option
+set config(auto)	1
 
 # External program to control the fans
 set config(i8kfan)	/usr/bin/i8kfan
@@ -17,14 +23,23 @@ set config(t_high)	80
 # you should check the BIOS temperature monitoring and set the appropriate
 # thresholds here. In doubt start with low values and gradually rise them
 # until the fans are not always on when the cpu is idle.
-set config(0)   {{0 0}  -1  50  -1  55}
-set config(1)   {{1 1}  50  65  55  70}
-set config(2)   {{2 2}  65  75  70  80}
-set config(3)   {{2 2}  75 128  80 128}
+# set config(0)   {{0 0}  -1  55  -1  60}
+# set config(1)   {{1 1}  50  65  55  70}
+# set config(2)   {{2 2}  60  75  65  80}
+# set config(3)   {{2 2}  70 128  75 128}
+
+set config(0)   {{0 0}  -1  60  -1  60}
+set config(1)   {{1 1}  55  70  55  70}
+set config(2)   {{2 2}  60  75  60  75}
+set config(3)   {{2 2}  70 128  70 128}
+# <-  40  45  50  55  60  65  70  75  ->
+# 0--------------------0
+#                 1------------1
+#                     2------------2
+#                             3--------3
 
 # Speed values are set here to avoid i8kmon probe them at every time it starts.
 set status(leftspeed)	"0 1000 2000 3000"
 set status(rightspeed)	"0 1000 2000 3000"
 
 # end of file
-set config(auto)       1
