Push local changes w/ dotbot

--- a/etc/mkinitcpio.conf
+++ b/etc/mkinitcpio.conf
@@ -1,13 +1,10 @@
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
-
 # vim:set ft=sh
 # MODULES
 # The following modules are loaded before any boot hooks are
 # run.  Advanced users may wish to specify all system modules
 # in this array.  For instance:
 #     MODULES=(piix ide_disk reiserfs)
-MODULES=(i915)
+MODULES=(i915 vmd)
 
 # BINARIES
 # This setting includes any additional binaries a given user may
@@ -19,7 +16,7 @@ BINARIES=()
 # FILES
 # This setting is similar to BINARIES above, however, files are added
 # as-is and are not parsed in any way.  This is useful for config files.
-FILES=""
+FILES=()
 
 # HOOKS
 # This is the most important setting in this file.  The HOOKS control the
@@ -52,15 +49,16 @@ FILES=""
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS="base udev autodetect modconf block keyboard keymap filesystems fsck"
+HOOKS=(base udev autodetect modconf block keyboard keymap consolefont filesystems fsck)
 
 # COMPRESSION
-# Use this to compress the initramfs image. By default, gzip compression
+# Use this to compress the initramfs image. By default, zstd compression
 # is used. Use 'cat' to create an uncompressed image.
+COMPRESSION="zstd"
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
-COMPRESSION="xz"
+#COMPRESSION="xz"
 #COMPRESSION="lzop"
 #COMPRESSION="lz4"
 
