Add UDEV rule to kill Discrete GPU with fire, since ACPI_CALL is a broken mess

--- a/config/albert/albert.conf
+++ b/config/albert/albert.conf
@@ -7,6 +7,9 @@ telemetry=false
 [org.albert.extension.applications]
 enabled=true
 
+[org.albert.extension.calculator]
+enabled=true
+
 [org.albert.extension.files]
 enabled=true
 
