Update albert config

--- a/config/albert/albert.conf
+++ b/config/albert/albert.conf
@@ -12,6 +12,9 @@ enabled=true
 
 [org.albert.extension.files]
 enabled=true
+filters=inode/directory, application/*
+fuzzy=true
+scan_interval=15
 
 [org.albert.extension.python]
 enabled=false
@@ -45,4 +48,4 @@ hideOnFocusLoss=true
 itemCount=5
 showCentered=true
 theme=Numix Rounded
-windowPosition=@Point(608 283)
+windowPosition=@Point(608 343)
