--- a/packages.conf.yaml
+++ b/packages.conf.yaml
@@ -22,6 +22,7 @@
   - whatsapp-nativefier
   - ttf-fira-code
   - ttf-jetbrains-mono
+  - noto-fonts-emoji
   - gparted
   - dislocker
   - grub2-theme-archlinux
