add gnome-shell-extensions package from aur

--- a/packages.conf.yaml
+++ b/packages.conf.yaml
@@ -13,6 +13,7 @@
   - evolution
   - gnome-calendar
   - gnome-shell-extension-pop-shell-bin
+  - gnome-shell-extensions
   - xdg-desktop-portal
   - libva-utils
   - intel-gpu-tools
